# c-apx

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  README.rst  azure-pipelines.yml  config.inc
.github/workflows/: main.yml
app/apx_control/: CMakeLists.txt
app/apx_control/inc/: message_client_connection.h
app/apx_control/include/: message_client_connection.h
app/apx_control/src/: apx_control_main.c  message_client_connection.c
app/apx_info/: CMakeLists.txt
app/apx_info/include/: apx_app_cmd.h  apx_observer_connection.h
app/apx_info/src/: apx_info_main.c  apx_observer_connection.c
app/apx_listen/: CMakeLists.txt  README.md
app/apx_listen/inc/: apx_connection.h  json_server.h  json_server_connection.h
app/apx_listen/src/: apx_connection.c  apx_listen_main.c  json_server.c  json_server_connection.c
app/apx_node/: CMakeLists.txt  README.md
app/apx_node/inc/: json_server.h
app/apx_node/include/: json_server.h
app/apx_node/src/: apx_connection.c  apx_node_main.c  json_server.c  json_server_connection.c
app/apx_perf_test/: CMakeLists.txt
app/apx_perf_test/src/: application.c  application.h  apx_perf_test_main.c
app/apx_server/: CMakeLists.txt
app/apx_server/src/: extensions.h  extensions_cfg.c  extensions_cfg.h  server_main.c
apx/apx-es/inc/: apx_es_cfg.h  apx_es_fileManager.h  apx_es_fileManager_cfg.h  apx_es_integration_template.h
apx/apx-es/src/: additional_source.txt  apx_es_fileManager.c  apx_es_integration.c
apx/apx-es/test/: mockTransmitter.c  mockTransmitter.h  testsuite_apx_es_filemanager.c  testsuite_apx_es_filemap.c
apx/apx-os/inc/: ComStack_Types.h  Platform_Types.h  Rte.h  Std_Types.h
apx/apx_es/inc/: additional_include.txt  apx_es_fileManager.h  apx_es_fileMap.h  apx_es_integration.h
apx/apx_es/src/: apx_es_fileManager.c  apx_es_fileMap.c
apx/apx_es/test/: test_main.c
apx/client/inc/: apx_client.h  apx_clientConnection.h  apx_clientConnectionBase.h  apx_clientInternal.h  apx_clientSession.h  apx_clientSocketConnection.h  apx_clientTestConnection.h  apx_cmd.h  apx_sessionCmd.h
apx/client/src/: apx_client.c  apx_clientConnection.c  apx_clientConnectionBase.c  apx_clientSession.c  apx_clientSocketConnection.c  apx_clientTestConnection.c  apx_cmd.c  apx_sessionCmd.c
apx/client/test/: ApxNode_TestNode1.c  ApxNode_TestNode1.h  ApxNode_TestNode2.c  ApxNode_TestNode2.h  apx_clientEventListenerSpy.c  apx_clientEventListenerSpy.h  apx_clientTestConnection.c  apx_clientTestConnection.h  generate_client_code.py  testsuite_apx_client.c  testsuite_apx_clientSession.c  testsuite_apx_client_dynamic_nodes.c  testsuite_apx_client_socketConnection.c  testsuite_apx_client_testConnection.c  testsuite_apx_dynamic_client.c  testsuite_apx_sessionCmd.c
apx/common/inc/: apx_allocator.h  apx_attributeParser.h  apx_bytePortMap.h  apx_cfg.h  apx_clientEventPlayer.h  apx_clientEventRecorder.h  apx_compiler.h  apx_connectionBase.h  apx_dataElement.h  apx_dataSignature.h  apx_dataTrigger.h  apx_datatype.h  apx_error.h  apx_event.h  apx_eventFile.h  (+65 more)
apx/config/: apx_server_cfg.json
apx/server/: Makefile
apx/server_main/: extensions.h  server_main.c
apx/src/: allocator.c  apx_client.c  apx_clientConnectionBase.c  apx_connectionBase.c  apx_dataSignature.c  apx_event.c  apx_eventListener.c  apx_eventLoop.c  apx_fileManagerReceiver.c  apx_node.c  apx_parser.c  apx_portConnectorChangeTable.c  apx_portDataRef.c  apx_server.c  apx_serverConnectionBase.c  apx_serverTestConnection.c  attribute_parser.c  byte_port_map.c  client.c  client_connection.c  client_connection_base.c  client_socket_connection.c  client_test_connection.c  command.c  compiler.c  computation.c  connection_base.c  connection_interface.c  connection_manager.c  data_element.c  data_signature.c  data_type.c  decoder.c  deserializer.c  event.c  event_listener.c  event_loop.c  file.c  file_cache.c  file_info.c  (+46 more)
apx/test/: allocator.c  apx_connectionEventSpy.c  apx_test_nodes.c  apx_test_nodes.h  apx_transmitHandlerSpy.h  byte_port_map.c  client_event_listener_spy.c  client_event_listener_spy.h  connection_event_spy.c  connection_event_spy.h  test_main.c  test_nodes.c  test_nodes.h  testsuite_allocator.c  testsuite_apx_attributeParser.c  testsuite_apx_portConnectionChangeEntry.c  testsuite_apx_serverConnection.c  testsuite_attribute_parser.c  testsuite_byte_port_map.c  testsuite_client.c  testsuite_client_socket_connection.c  testsuite_client_socket_monitor_connection.c  testsuite_client_test_connection.c  testsuite_compiler.c  testsuite_compiler_pack.c  testsuite_compiler_unpack.c  testsuite_computation.c  testsuite_connection_base.c  testsuite_data_element.c  testsuite_data_routing.c  testsuite_data_signature.c  testsuite_data_type.c  testsuite_decoder.c  testsuite_event_loop.c  testsuite_file.c  testsuite_file_info.c  testsuite_file_manager.c  testsuite_file_manager_receiver.c  testsuite_file_manager_shared.c  testsuite_file_manager_worker.c  (+26 more)
autosar/: README.txt
autosar/inc/: Platform.h
autosar/os/: README.txt
bstr/: README.txt
bstr/inc/: bscan.h  bstr.h
bstr/src/: bscan.c  bstr.c
bstr/test/: testsuite_bstr.c
cmake/: SetEnv.cmake  apx_build_cfg.h.in
cutest/: CuTest.c  CuTest.h
doc/byte_code_tests/: array_of_arrays.txt  array_of_record.txt  record.txt  record_inside_record.txt
example/config/: apx_server_cfg.json
example/nodes/: record_listener.apx  string_listener.apx  string_sender.apx  unsigned_sender.apx
npipe/inc/: npipe.h  npipe_server.h
npipe/src/: npipe.c  npipe_server.c
projects/cmake/apx_unit_test/: CMakeLists.txt
remotefile/inc/: numheader.h  rmf.h  rmf_cfg.h
remotefile/src/: numheader.c  rmf.c
remotefile/test/: testsuite_remotefile.c
scan/: README.txt
scan/inc/: scan.h
scan/src/: scan.c
util/inc/: CMemLeak.h  headerutil.h  msc_bool.h  optparse.h  pack.h  pstr.h  ringbuf.h  ringbuf_cfg.h  scan.h  soa.h  soa_chunk.h  soa_fsa.h
util/src/: CMemLeak.c  headerutil.c  optparse.c  pack.c  pstr.c  ringbuf.c  scan.c  soa.c  soa_chunk.c  soa_fsa.c
util/test/: testsuite_headerutil.c  testsuite_pack.c  testsuite_soa_fsa.c
(+474 files in other folders)
